[package]
name = "hassium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

windows = { version = "0.44", features = [
    "implement",
    "Foundation",
    "Foundation_Collections",
    "Devices_Enumeration",
    "Devices_Display",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
] }