[package]
name = "hassium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

windows = { version = "0.46.0", features = [
    "implement",
    "Foundation",
    "Foundation_Collections",
    "Devices_Enumeration",
    "Win32_System_Registry",
    "Devices_Display",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
] }

winreg = "0.11.0"

dialoguer = "0.10.3"


[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true  # Link-time optimization.
codegen-units = 1
